# posit-and-databricks

./: README.md  databricks.yml  requirements.txt
databricks-apps/getting-started/: README.md  eda.qmd  llms.txt  pyproject.toml
databricks-apps/getting-started/app/: app.py  app.yaml  pyproject.toml  requirements.txt
databricks-apps/getting-started/data/: generate_sales_data.py  sales.parquet
databricks-apps/hello-world-gradio/: requirements.txt
databricks-connections/: databricks-connections.qmd
