[project]
name = "shiny-sales-dashboard"
version = "0.1.0"
description = "Simple Shiny sales dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shiny>=0.8.0",
    "ibis-framework[databricks]>=8.0.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
    "databricks-sdk>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []